--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "bootstrap": "^5.1.3",
     "gatsby": "^4.1.0",
     "gatsby-plugin-image": "^2.1.0",
+    "gatsby-plugin-mdx": "^3.1.0",
     "gatsby-plugin-sharp": "^4.1.0",
     "gatsby-source-filesystem": "^4.1.0",
     "gatsby-transformer-json": "^4.1.0",
