--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-source-filesystem": "^4.1.0",
     "gatsby-transformer-json": "^4.1.0",
     "react": "^17.0.1",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^17.0.1",
     "react-vertical-timeline-component": "^3.5.2"
   },
