--- a/src/data/MyProjects.json
+++ b/src/data/MyProjects.json
@@ -68,7 +68,7 @@
             "connections": "what connections can I make",
             "goals_text": "how does this relate to my goals",
             "reflection": "reflection on project",
-            "image": "vancouver_city.jpg"
+            "image": "ETEC543-1.png"
         },
 
         {
