--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.1",
+    "react-slick": "^0.28.1",
     "react-vertical-timeline-component": "^3.5.2"
   },
   "devDependencies": {
