add single object query

--- a/src/data/MyProjects.json
+++ b/src/data/MyProjects.json
@@ -11,7 +11,7 @@
             "description": "'How do we learn?' Learning theories describe how ",
             "connections": "what connections can I make",
             "goals_text": "Learning the language of educators was an important reason for my interest in the MET program. In order to make connections between technology, students, and instructors it is important to have a good understanding of the context of the three.",
-            "reflection": "reflection on project",
+            "reflection": "While this concept map is a simple one, it helped me to establish some foundational knowledge about learning theories, their histories, and their relationships to each oth",
             "image": "vancouver_city.jpg"
 
         }, 
