--- a/src/data/MyProjects.json
+++ b/src/data/MyProjects.json
@@ -36,9 +36,9 @@
             "course": "ETEC 520",
             "goals": ["1"],
             "type": "paper",
-            "description": "Educational technology can be adopted at multiple levels: in a classroom, a program, or an entire institution. This evaluation guaged institutional preparedness eLearning by examining institutional culture, preparedness, and infrastructure.",
+            "description": "Educational technology can be adopted at multiple levels: in a classroom, a program, or an entire institution. This evaluation guaged institutional preparedness for eLearning by examining institutional culture, preparedness, and infrastructure.",
             "connections": "what connections can I make",
-            "goals_text": "how does this relate to my goals",
+            "goals_text": "Educational technologies can be adopted at a classroom level, but are more often adopted at institutional levels. For example, learning management systems are now common-place at large Canadian institutions. Adoption of technologies at a high level require investments in people and infrastructure that needs to outlast the individual technologies. ",
             "reflection": "reflection on project",
             "image": "vancouver_city.jpg"
         }, 
@@ -53,7 +53,7 @@
             "description": "In this paper and accompanying workshop, I propose that Design Thinking is an appropriate model to connect constructivist theory with practical application. The workshop will have participants use an adapted Design Thinking process to plan a constructivist lesson.",
             "connections": "what connections can I make",
             "goals_text": "how does this relate to my goals",
-            "reflection": "reflection on project",
+            "reflection": "This project was my first deep-dive into Constructivism, and I admittedly struggled to reconcile constructivism as a philosophy and as a learning theory.",
             "image": "vancouver_city.jpg"
         },
 
