--- a/src/data/MyProjects.json
+++ b/src/data/MyProjects.json
@@ -73,7 +73,7 @@
             "connections": "what connections can I make",
             "goals_text": "how does this relate to my goals",
             "reflection": "reflection on project",
-            "image": "../images/ETEC530-1/png",
+            "image": "../images/ETEC530-1.png",
             "links": ["https://docs.google.com/document/d/e/2PACX-1vSw3f1eclZS20xz_IpDycyYonTYrsn70fdlvdkvQaY5jX1nb48QYq_i1CwdHUNgQg/pub"]
         },
 
