--- a/src/data/MyProjects.json
+++ b/src/data/MyProjects.json
@@ -4,6 +4,7 @@
         {
             "id": "ETEC510-1",
             "title": "Exploring VR",
+            "category": "sketch",
             "date": "2019-09-01",
             "course": "ETEC 510",
             "goals": ["1"],
@@ -20,6 +21,7 @@
         {
             "id": "ETEC512-1",
             "title": "Learning Theories Concept Map",
+            "category": "sketch",
             "date": "2019-09-01",
             "course": "ETEC 512",
             "goals": ["1"],
@@ -35,6 +37,7 @@
         {
             "id": "ETEC512-2",
             "title": "Neuroscience and Learning Introductory Course",
+            "category": "sketch",
             "date": "2019-10-01",
             "course": "ETEC 512",
             "goals": ["1", "3", "4"],
@@ -50,6 +53,7 @@
         {
             "id": "ETEC520-1",
             "title": "Rationales for eLearning",
+            "category": "sketch",
             "date": "2019-06-02",
             "course": "ETEC 520",
             "goals": ["1"],
@@ -65,6 +69,7 @@
         {
             "id": "ETEC530-1",
             "title": "Design Thinking Workshop",
+            "category": "sketch",
             "date": "2021-04-28",
             "course": "ETEC 530",
             "goals": ["1", "2"],
@@ -80,6 +85,7 @@
         {
             "id": "ETEC543-1",
             "title": "Learning Analytics Dashboard",
+            "category": "sketch",
             "date": "2019-11-01",
             "course": "ETEC 543",
             "goals": ["1", "3"],
@@ -95,6 +101,7 @@
         {
             "id": "ETEC524-1",
             "title": "A Course Companion Website",
+            "category": "sketch",
             "date": "2019-09-01",
             "course": "ETEC 524",
             "goals": ["1", "4"],
@@ -111,6 +118,7 @@
         {
             "id": "ETEC590-1",
             "title": "This ePortfolio",
+            "category": "sketch",
             "date": "2019-09-01",
             "course": "ETEC 590",
             "goals": ["4"],
