--- a/src/data/MyProjects.json
+++ b/src/data/MyProjects.json
@@ -53,7 +53,7 @@
         {
             "id": "ETEC520-1",
             "title": "Rationales for eLearning",
-            "category": "sketch",
+            "category": "outline",
             "date": "2019-06-02",
             "course": "ETEC 520",
             "goals": ["1"],
@@ -69,7 +69,7 @@
         {
             "id": "ETEC530-1",
             "title": "Design Thinking Workshop",
-            "category": "sketch",
+            "category": "outline",
             "date": "2021-04-28",
             "course": "ETEC 530",
             "goals": ["1", "2"],
@@ -85,7 +85,7 @@
         {
             "id": "ETEC543-1",
             "title": "Learning Analytics Dashboard",
-            "category": "sketch",
+            "category": "colour",
             "date": "2019-11-01",
             "course": "ETEC 543",
             "goals": ["1", "3"],
@@ -101,7 +101,7 @@
         {
             "id": "ETEC524-1",
             "title": "A Course Companion Website",
-            "category": "sketch",
+            "category": "outline",
             "date": "2019-09-01",
             "course": "ETEC 524",
             "goals": ["1", "4"],
@@ -118,7 +118,7 @@
         {
             "id": "ETEC590-1",
             "title": "This ePortfolio",
-            "category": "sketch",
+            "category": "colour",
             "date": "2019-09-01",
             "course": "ETEC 590",
             "goals": ["4"],
