--- a/src/data/MyProjects.json
+++ b/src/data/MyProjects.json
@@ -119,6 +119,23 @@
             "image": "../images/ETEC543-1.png",
             "links": ["https://public.tableau.com/views/LAAdventure-FinalProject/Acknowledgements?:language=en-US&:display_count=n&:origin=viz_share_link"]
         },
+
+        {
+            "id": "ETEC590-1",
+            "title": "Another LA Dashboard",
+            "category": "colour",
+            "date": "2021-08-20",
+            "course": "ETEC 580",
+            "goals": ["3"],
+            "type": "website",
+            "description": "",
+            "connections": "",
+            "goals_text": "",
+            "reflection": "",
+            "image": "../images/ETEC580-1.png",
+            "links": []
+
+        },
       
         {
             "id": "ETEC590-1",
