update project cards to tag

--- a/src/data/MyProjects.json
+++ b/src/data/MyProjects.json
@@ -29,6 +29,7 @@
                 "date": "2019-09-01",
                 "course": "ETEC 510",
                 "goals": ["1", "3", "4"],
+                "group": "",
                 "type": "website",
                 "description": "This wordpress blog was designed as an introduction to a FitBit for new users. It was an opportunity to develop content. This was one of my first uses of Wordpress.",
                 "connections": "While only a few years ago, this artifact shows just how quickly technology is changing. I created this artifact to showcase a new (to me) wearable device. Since that time, I no longer use a fitbit, rather changed to an Apple Watch. ... digital archeaology...",
@@ -48,6 +49,7 @@
                 "course": "ETEC 512",
                 "goals": ["1"],
                 "type": "image",
+                "group": "",
                 "description": "This concept map was developed to demonstrate understanding of the history and context of important learning theories. It highlights key figures and connections between these theories.",
                 "connections": "This artifact introduced me to a tool that I have integrated into my learning and sharing of knowledge - concept maps and diagrams. his was one of (many) concept maps I developed throughout the MET program. Diagrams have become a more regular tool both personally and professionally.",
                 "goals_text": "",
@@ -64,7 +66,7 @@
                 "course": "ETEC 512",
                 "goals": ["1", "3", "4"],
                 "type": "website",
-                "group": ["group members"],
+                "group": "group members",
                 "description": "This 'introductory course' was developed to introduce our peers to the neuroscience of learning. My background is in psychology, so the development of the content and the course itself was also an opportunity to review some of these concepts myself, but to think about them from the perspective of course design, or in relation to other learning theories.",
                 "connections": "We used Rise as our platform for developing our course. It truly was pleasure to build because the platform itself was quite intuitive, dealt with the 'look and feel', and offered customization that we thought was important. ",
                 "goals_text": "",
@@ -100,6 +102,7 @@
             "date": "2021-04-28",
             "course": "ETEC 530",
             "goals": ["1", "2"],
+            "group": "",
             "type": "workshop",
             "description": "In this paper and accompanying workshop, I proposed that Design Thinking is an appropriate model to connect Constructivist theory with practical application. The workshop proposed that participants use an adapted Design Thinking process to plan a constructivist lesson.",
             "connections": "",
@@ -116,6 +119,7 @@
             "date": "2019-09-01",
             "course": "ETEC 524",
             "goals": ["1", "4"],
+            "group": "",
             "type": "website",
             "description": "In ETEC 524 we developed the structure of a course, as well as the structure of a module of that course. I used Moodle as my course shell, but determined it was important to have content that 'lived on' past the end of a course. So, I developed the majority of my content in this course companion website.",
             "connections": "what connections can I make",
@@ -156,6 +160,7 @@
             "date": "2021-08-20",
             "course": "ETEC 580",
             "goals": ["3"],
+            "group": "",
             "type": "website",
             "description": "",
             "connections": "",
@@ -173,11 +178,12 @@
             "date": "2019-09-01",
             "course": "ETEC 590",
             "goals": ["4"],
+            "group": "",
             "type": "website",
             "description": "Throughout the MET program, I have most enjoyed being able to build tools. This ePortfolio is no exception, and the biggest challenge. This ePortfolio dynamically creates its content, including what you are reading now.",
             "connections": "I have built two Wordpress blogs, one Moodle course with a custom companion website, and a Rise (Articulate) course. The development of the content for these websites made me curious about the 'behind the scenes'. There were some components of those websites that I have tried to build here (for example, the 'sliders' of more detail), but for the most part I was trying to build componenets that I thought would work to expand my idea of what an ePortfolio could be.",
             "goals_text": "how does this relate to my goals",
-            "reflection": "I had hoped to do more writing and research throughout my courses - as this is not something I noramlly have much time for in my day-to-day. However, when the option was available to create something, that was the path I generally took.",
+            "reflection": "I had hoped to do more writing and research throughout my courses - as this is not something I normally have much time for in my day-to-day. However, when the option was available to create something, that was the path I generally took.",
             "image": "../images/ETEC590-1.png",
             "links": ["https://alisonmyers.gatsby.io/blogs"]
 
