--- a/src/data/MyProjects.json
+++ b/src/data/MyProjects.json
@@ -131,7 +131,7 @@
             "connections": "what connections can I make",
             "goals_text": "how does this relate to my goals",
             "reflection": "reflection on project",
-            "image": "../images/ETEC524-1.png",
+            "image": "../images/ETEC524-1b.png",
             "iframe": "",
             "links": ["https://intro-to-data-and-viz.github.io/introduction"],
             "tags": ["design", "tinkering"]
