--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-icons/all-files": "^4.1.0",
     "bootstrap": "^5.1.3",
     "gatsby": "^4.1.0",
+    "gatsby-adapter-netlify": "^1.1.1",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-image": "^2.1.0",
     "gatsby-plugin-mdx": "^3.1.0",
